--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -35,9 +35,9 @@ spring:
 
 system-params:
   # cas登录服务地址
-  cas_url: http://127.0.0.1:8080/cas/login?locale=zh_CN&service=http%3A%2F%2Flocalhost%3A8080%2Fportal%2Fcallback%3Fclient_name%3DCasClient
-  portal_url: http://127.0.0.1:8080/cas/logout?service=http%3A%2F%2Flocalhost%3A7202%2Fjx-etl%2F
-  portal_app: 批量数据处理
-  soap_url: http://127.0.0.1:18001/portal/intlDataSynchronizedService?wsdl
-  cas_server_url_prefix: http://127.0.0.1:8080/cas
-  project_url: http://127.0.0.1:8060/
+  cas_url: http://10.10.10.41:17001/cas/login?locale=zh_CN&service=http%3A%2F%2F10.10.10.42%3A8080%2Fportal%2Fcallback%3Fclient_name%3DCasClient
+  portal_url: http://10.10.10.41:17001/cas/logout?service=http%3A%2F%2F10.10.10.36%3A8090%2Fjx-kafmot%2F
+  portal_app: 实时数据处理监控系统
+  soap_url: http://10.10.10.42:18001/portal/intlDataSynchronizedService?wsdl
+  cas_server_url_prefix: http://10.10.10.41:17001/cas
+  project_url: http://10.10.10.36:8090/
