--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,13 @@ spring:
       max-file-size: 1000MB
       max-request-size: 1000MB
       enabled: true
+dfjx:
+  global-session-timeout: 3600
+  cluster: false
+  redis:
+    open: false  # 是否开启redis缓存  true开启   false关闭
+  shiro:
+    redis: false # true表示shiro session存到redis里，需要开启redis，才会生效【分布式场景】
 
 app:
   path:
