打包相关配置

--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,9 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <mainClass>io.dfjinxin.DfjinxinUploadApplication</mainClass>
+        </configuration>
       </plugin>
     </plugins>
   </build>
