修改成统一权限认证。

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -33,11 +33,18 @@ spring:
           config:
             multi-statement-allow: true
 
-system-params:
-  # cas登录服务地址
-  cas_url: http://127.0.0.1:8080/cas/login?locale=zh_CN&service=http%3A%2F%2Flocalhost%3A8080%2Fportal%2Fcallback%3Fclient_name%3DCasClient
-  portal_url: http://127.0.0.1:8080/cas/logout?service=http%3a%2f%2f127.0.0.1%3a8060%2f
-  portal_app: 批量数据处理
-  soap_url: http://127.0.0.1:18001/portal/intlDataSynchronizedService?wsdl
-  cas_server_url_prefix: http://127.0.0.1:8080/cas
-  project_url: http://127.0.0.1:8060/
+#统一认证
+auth:
+  client:
+    id: testclientid
+    secret: 123456
+  config:
+    need: true
+  login:
+    url: ${auth-frontier-url}/frontier/auth/toLogin?redirect_url=
+  logout:
+    url: ttp://123.207.126.81:9302/cas/logout
+
+# 数研统一认证配置
+auth-url: http://123.207.126.81:30002
+auth-frontier-url: http://123.207.126.81:30001
