--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,36 @@
     <java.version>1.8</java.version>
   </properties>
 
+  <profiles>
+    <profile>
+      <id>dev</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <profileActive>dev</profileActive>
+      </properties>
+    </profile>
+    <profile>
+      <id>test</id>
+      <properties>
+        <profileActive>test</profileActive>
+      </properties>
+    </profile>
+    <profile>
+      <id>prod</id>
+      <properties>
+        <profileActive>prod</profileActive>
+      </properties>
+    </profile>
+    <profile>
+      <id>gongsi</id>
+      <properties>
+        <profileActive>gongsi</profileActive>
+      </properties>
+    </profile>
+  </profiles>
+
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -141,6 +171,16 @@
       <artifactId>dom4j</artifactId>
       <version>2.1.0</version>
     </dependency>
+      <dependency>
+          <groupId>org.aspectj</groupId>
+          <artifactId>aspectjweaver</artifactId>
+          <version>1.9.4</version>
+      </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.9</version>
+    </dependency>
 
 
   </dependencies>
@@ -177,6 +217,15 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
           <mainClass>io.dfjinxin.DfjinxinUploadApplication</mainClass>
+        </configuration>
+      </plugin>
+
+      <!-- 打包跳过 test -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
         </configuration>
       </plugin>
     </plugins>
