--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ server:
 
 spring:
   profiles:
-    active: dev
+    active: @profileActive@
   servlet:
     multipart:
       max-file-size: 1000MB
